--- a/template.html
+++ b/template.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.staticfile.org/semantic-ui/2.4.1/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
-<title>基于python的A股行情看板</title>
+<title>python股市行情看板</title>
 <body>
 
 <div class="page">
